<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/show_pet_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_pet_button"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/opinion_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:text="@string/opinion_text"/>

    <TextView
        android:id="@+id/page_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:linksClickable="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/page_link"/>

</RelativeLayout>